Add incremental repo scan execution
